--- a/source/_posts/php/php_001_安装.md
+++ b/source/_posts/php/php_001_安装.md
@@ -4,6 +4,7 @@ date: 2018-11-04 15:25:38
 tags: php
 categories: php 
 ---
+
 ubuntu
 
 ubuntu 中软件的卸载方法：
@@ -62,3 +63,76 @@ apt-cache search php7
 --enable-fpm
 
 sudo make && sudo make install
+```
+
+# 编译
+
+```sh
+# php7.1
+./configure --prefix=/usr/local/php71 --with-config-file-path=/usr/local/php71/etc --with-config-file-scan-dir=/usr/local/php71/conf.d --enable-fpm --with-fpm-user=www --with-fpm-group=www --with-mysqli=mysqlnd --with-pdo-mysql=mysqlnd --with-iconv-dir --with-freetype-dir=/usr/local/freetype --with-jpeg-dir --with-png-dir --with-zlib --with-libxml-dir=/usr --enable-xml --disable-rpath --enable-bcmath --enable-shmop --enable-sysvsem --enable-inline-optimization --with-curl --enable-mbregex --enable-mbstring --with-mcrypt --enable-ftp --with-gd --enable-gd-native-ttf --with-openssl --with-mhash --enable-pcntl --enable-sockets --with-xmlrpc --enable-zip --enable-soap --with-gettext --disable-fileinfo --enable-intl --with-xsl --enable-maintainer-zts 
+ ./configure --with-php-config=/usr/local/php71/bin/php-config --with-readline
+
+# php7废弃的扩展
+# --with-mysql=mysqlnd
+
+sudo make && sudo make install
+```
+
+```comment
+Warning! a PEAR user config file already exists from a previous PEAR installation at '/home/hanzhijie/.pearrc'. You may probably want to remove it.
+Wrote PEAR system config file at: /usr/local/php71/etc/pear.conf
+You may want to add: /usr/local/php71/lib/php to your php.ini include_path
+/mnt/c/Users/hzj/Desktop/boom/tmp/php-7.1.26/build/shtool install -c ext/phar/phar.phar /usr/local/php71/bin
+ln -s -f phar.phar /usr/local/php71/bin/phar
+Installing PDO headers:           /usr/local/php71/include/php/ext/pdo/
+```
+
+## php7.3
+
+```sh
+
+
+./configure --prefix=/usr/local/php73 --with-config-file-path=/usr/local/php73/etc --with-config-file-scan-dir=/usr/local/php73/conf.d --enable-fpm --with-fpm-user=www --with-fpm-group=www --with-mysqli=mysqlnd --with-pdo-mysql=mysqlnd --with-iconv-dir --with-freetype-dir=/usr/local/freetype --with-jpeg-dir --with-png-dir --with-zlib --with-libxml-dir=/usr --enable-xml --disable-rpath --enable-bcmath --enable-shmop --enable-sysvsem --enable-inline-optimization --with-curl --enable-mbregex --enable-mbstring --enable-ftp --with-gd  --with-openssl --with-mhash --enable-pcntl --enable-sockets --with-xmlrpc --enable-zip --enable-soap --with-gettext --disable-fileinfo --enable-intl --with-xsl --with-kerberos --enable-sysvshm --enable-opcache --enable-libxml --with-bz2 --with-pear --with-pdo-sqlite --with-pcre-regex --with-libdir=lib64 --with-kerberos --enable-maintainer-zts  
+./configure --with-php-config=/usr/local/php73/bin/php-config --with-readline
+# php7.2废弃的扩展
+# --with-mcrypt --enable-gd-native-ttf 
+
+```
+
+```sh
+Warning! a PEAR user config file already exists from a previous PEAR installation at '/home/hanzhijie/.pearrc'. You may probably want to remove it.
+Wrote PEAR system config file at: /usr/local/php73/etc/pear.conf
+You may want to add: /usr/local/php73/lib/php to your php.ini include_path
+/mnt/c/Users/hzj/Desktop/boom/tmp/php-7.3.2/build/shtool install -c ext/phar/phar.phar /usr/local/php73/bin
+ln -s -f phar.phar /usr/local/php73/bin/phar
+Installing PDO headers:           /usr/local/php73/include/php/ext/pdo/
+```
+
+
+## pthreads 安装
+
+```comment
+----------------------------------------------------------------------
+Libraries have been installed in:
+   /mnt/c/Users/hzj/Desktop/boom/tmp/pthreads-master/modules
+
+If you ever happen to want to link against installed libraries
+in a given directory, LIBDIR, you must either use libtool, and
+specify the full pathname of the library, or use the `-LLIBDIR'
+flag during linking and do at least one of the following:
+   - add LIBDIR to the `LD_LIBRARY_PATH' environment variable
+     during execution
+   - add LIBDIR to the `LD_RUN_PATH' environment variable
+     during linking
+   - use the `-Wl,--rpath -Wl,LIBDIR' linker flag
+   - have your system administrator add LIBDIR to `/etc/ld.so.conf'
+
+See any operating system documentation about shared libraries for
+more information, such as the ld(1) and ld.so(8) manual pages.
+----------------------------------------------------------------------
+
+Build complete.
+Don't forget to run 'make test'.
+
+Installing shared extensions:     /usr/local/php73/lib/php/extensions/no-debug-zts-20180731/
+```
