--- a/source/_posts/other/2020.md
+++ b/source/_posts/other/2020.md
@@ -3,23 +3,16 @@ title: 2020
 date: 2020-12-31 23:59
 tags: other
 categories: other
+thumbnail: /images/vector_landscape_1.svg
 ---
 
-react 中引入下面两个就可以直接使用。好像我想多了，一会再单独看一下
 
-```
-npm i classnames -S
-npm i styled-components  -S
-```
+# z
 
-
-今年有一个eva的剧场版大概6月
-
-有个fate的剧场版大概不记得几月
+- Fate/stay night [Heaven's Feel]
+- 新世纪福音战士新剧场版:终
 
 
 
-
-<!--more-->
 
 
