--- a/source/_posts/php/php-入门/P11-函数再认识.md
+++ b/source/_posts/php/php-入门/P11-函数再认识.md
@@ -56,7 +56,7 @@ echo \$str;
 
 show(\$str);
 
-默写：
+：
 
 1.引用时两个变量指向同一个存储空间
 
@@ -68,7 +68,7 @@ show(\$str);
 
 4.在使用引用传参时，如果传的是一个没有定义的变量不会报错，相当于定义了一个变量
 
-可变参数类型 默写
+可变参数类型 
 
 func\_num\_args() //返回的是调用时候实参参数的个数
 
@@ -105,7 +105,7 @@ show(1, 2, 3, 4, 5);
 
 //jiang shican zhong de canshu liebiao jiexi cheng shuzu
 
-include require include\_once require\_once默写：区别
+include require include\_once require\_once：区别
 
 include :包含文件并执行 参数：文件路径跟名字
 
@@ -177,15 +177,15 @@ return \$str;
 
 \$\_FILES得到文件上传的结果
 
-\$\_GET得到get传值的结果 //默写
+\$\_GET得到get传值的结果 //
 
-\$\_POST得到post传值的结果//默写
+\$\_POST得到post传值的结果//
 
-\$\_REQUEST即能得到get的传值结果，//默写
+\$\_REQUEST即能得到get的传值结果，//
 
 也能得到Post传值的结果
 
-\_\_FUNCTION\_\_ 默写
+\_\_FUNCTION\_\_ 
 
 \-\-\-\-\-\-\-\-\-\-\-\-\-\-\--
 
