--- a/source/_posts/php/php-入门/P23-下载上传.md
+++ b/source/_posts/php/php-入门/P23-下载上传.md
@@ -29,7 +29,7 @@ scandir() 浏览当前目录
 
 filetype() 返回的是文件的类型 不是文件后缀
 
-\-\-\-\-\-\-\-\-\--
+---------
 
 权限
 
@@ -51,9 +51,9 @@ chown: 改变文件所有者
 
 使用场景：
 
-上传：头像，朋友圈，微博 证件\.....
+上传：头像，朋友圈，微博 证件 .....
 
-下载：安装包，图片 \...
+下载：安装包，图片 ...
 
 准备工作：
 
